# HPC-A

./: .gitignore  GUIGuide.md  LICENSE  Linux (Ubuntu) VTK installation guide.md  Qt installation guide.md  RBCGUI.pro  README.md  SimulationGuide.md  VTK installation guide.md  VTKInstallationGuide.md  VTKReader.cpp  VTKReader.h  VisualizationGuide.md  main.cpp  myresources.qrc  parameter_setting.cpp  parameter_setting.h  rbcgui.h  rbcgui.ui
RBCGUI/: RBCGUI.pro  main.cpp  rbcgui.cpp.autosave
RBConvection/0/: T  U  alphat  epsilon  k  mag(U)  nut  p  p_rgh  set
RBConvection/10/: T  U  alphat  p  p_rgh  phi
RBConvection/100/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1000/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1020/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1040/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1060/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1080/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/110/: T  U  alphat  p  p_rgh  phi
RBConvection/1100/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1120/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1140/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1160/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1180/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/120/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1200/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1220/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1240/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1260/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/1280/: T  U  alphat  mag(U)  p  p_rgh  phi
RBConvection/130/: T  U  alphat  p  p_rgh  phi
RBConvection/1300/: T  U  alphat  mag(U)  p  p_rgh  phi
gui/RBCGUI/: T  (+15 more)
images/: README.md
release/: Release-Linux-CommandLine-1.0  main
simulation/: CMakeLists.txt  RBConvSim.cpp  RBConvSim.h  README.md  main.cpp  set.cpp
simulation/src/: CMakeLists.txt  RBConvSim.h
visualization/: CMakeLists.txt  ReadUnstructuredGrid.cxx  mainVisualizer.cxx
visualization/VTK_testfiles/: RBConvection_200.vtk  RBConvection_60.vtk
visualization/VTK_testfiles/saver/: RBConvection_10.vtk  RBConvection_100.vtk  RBConvection_110.vtk  RBConvection_130.vtk  RBConvection_150.vtk  RBConvection_160.vtk  RBConvection_170.vtk  RBConvection_180.vtk  RBConvection_20.vtk  RBConvection_30.vtk  RBConvection_40.vtk  RBConvection_50.vtk  RBConvection_70.vtk  RBConvection_80.vtk
visualization/src/: CMakeLists.txt  VTKReader.cpp  VTKReader.h
(+868 files in other folders)
